# ncmdump_gui

./: .gitignore  CMakeLists.txt  LICENSE  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  Worker.cpp  Worker.h  build.bat  build_installer.bat  main.cpp
.github/workflows/: windows-build.yml
ncmtool_install/: ncmtool_installer.nsi
src/core/: Worker.cpp
src/ui/: MainWindow.cpp
